[WK2][GTK] Fix the build after r180362 https://bugs.webkit.org/show_bug.cgi?id=141813

Reviewed by Žan Doberšek.

Add several missing includes and a specific implementation of
toAPI/toImpl for GTK+ WebView.

* UIProcess/API/C/gtk/WKAPICastGtk.h:
(WebKit::toAPI):
(WebKit::toImpl):
* UIProcess/API/C/gtk/WKView.cpp:
* UIProcess/API/gtk/WebKitFormClient.cpp:
* UIProcess/Network/CustomProtocols/soup/WebSoupCustomProtocolRequestManagerClient.cpp:
* UIProcess/gtk/WebInspectorClientGtk.cpp:

Canonical link: https://commits.webkit.org/159851@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180409 268f45cc-cd09-0410-ab3c-d52691b4dbfc