Source/WebKit2/UIProcess/API/gtk/WebKitFormClient.cpp
@@ -20,6 +20,8 @@
 #include "config.h"
 #include "WebKitFormClient.h"
 
+#include "APIDictionary.h"
+#include "WebFormSubmissionListenerProxy.h"
 #include "WebKitFormSubmissionRequestPrivate.h"
 #include "WebKitPrivate.h"
 #include "WebKitWebViewBasePrivate.h"
